@@ -36,7 +36,7 @@ build_script:
   - ps: 'New-Item -Path Env: -Name VERSION -Value $(C:\Python38-x64\python.exe scripts\get_version.py)'
   - cmd: echo %VERSION% > build_version
   - ps: 'echo "Building branch $env:APPVEYOR_REPO_BRANCH - version $env:VERSION"'
-  - cmd: C:\Python38-x64\Scripts\pyinstaller --add-data "fastflix\data\rotations\*;fastflix\data\rotations" --add-data "fastflix\data\icon.ico;fastflix\data" --add-data "CHANGES;fastflix\." --add-data "docs\build-licenses.txt;docs" --hidden-import=pyqt5 --hidden-import=requests --hidden-import="python-box" --hidden-import=reusables --hidden-import="pkg_resources.py2_warn"  fastflix\gui.py  --icon fastflix\data\icon.ico --name FastFlix --clean --onefile
+  - cmd: C:\Python38-x64\Scripts\pyinstaller --add-data "fastflix\data\encoders\*;fastflix\data\encoders" --add-data "fastflix\data\rotations\*;fastflix\data\rotations" --add-data "fastflix\data\icon.ico;fastflix\data" --add-data "CHANGES;fastflix\." --add-data "docs\build-licenses.txt;docs" --hidden-import=pyqt5 --hidden-import=requests --hidden-import="python-box" --hidden-import=reusables --hidden-import="pkg_resources.py2_warn"  fastflix\gui.py  --icon fastflix\data\icon.ico --name FastFlix --clean --onefile
   # - cmd: IF NOT %APPVEYOR_REPO_BRANCH% == build ( C:\Python38-x64\Scripts\pyinstaller --add-data "bundled;." --add-data "encoders.7z;extra"  --add-data "build_version;." --add-data "data\rotations\*;data\rotations" --add-data "data\icon.ico;data" --add-data "binary-files\executables\windows\svt-av1_aom\svt-1.0.549.7z;extra" --add-data "docs\build-licenses.txt;docs" --add-data "binary-files\executables\windows\7-zip\1900\x64\*;extra" --add-data "binary-files\executables\windows\ffmpeg\lgpl\N-93214-g7e4d3dbe18\x86_64\ffmpeg_lgpl.7z;extra" --paths "C:\Python38-x64\Lib\site-packages\shiboken2" fastflix\gui.py  --icon data\icon.ico --name FastFlix --clean --onefile --noconsole )
 
 after_build:
