@@ -1,9 +1,12 @@
 #!/usr/bin/env python
 # -*- coding: utf-8 -*-
 __author__ = "Chris Griffith"
+from pathlib import Path
+import pkg_resources
 
 name = "AV1 (AOM)"
 requires = "libaom"
+icon = str(Path(pkg_resources.resource_filename(__name__, f"../../data/encoders/icon_av1_aom.png")).resolve())
 
 video_extension = "mkv"
 video_dimension_divisor = 8
