@@ -1,12 +1,15 @@
 #!/usr/bin/env python
 # -*- coding: utf-8 -*-
 __author__ = "Chris Griffith"
+from pathlib import Path
+import pkg_resources
 
 name = "AVC (x264)"
 requires = "libx264"
 
 video_extension = "mkv"
 video_dimension_divisor = 1
+icon = str(Path(pkg_resources.resource_filename(__name__, f"../../data/encoders/icon_x264.png")).resolve())
 
 enable_subtitles = True
 enable_audio = True
