@@ -19,6 +19,7 @@ class AttachmentPanel(QtWidgets.QWidget):
 
         sp = QtWidgets.QSizePolicy()
         sp.setVerticalPolicy(QtWidgets.QSizePolicy.Policy.Maximum)
+        sp.setHorizontalPolicy(QtWidgets.QSizePolicy.Policy.Maximum)
 
         info = QtWidgets.QLabel()
         info.setPixmap(self.style().standardIcon(QtWidgets.QStyle.SP_MessageBoxWarning).pixmap(16, 16))
@@ -79,9 +80,9 @@ class AttachmentPanel(QtWidgets.QWidget):
             self.main.page_update()
             return
         if (
-            not Path(cover).exists()
-            or not Path(cover).is_file()
-            or not cover.lower().endswith((".jpg", ".png", ".jpeg"))
+                not Path(cover).exists()
+                or not Path(cover).is_file()
+                or not cover.lower().endswith((".jpg", ".png", ".jpeg"))
         ):
             return
         try:
@@ -124,9 +125,9 @@ class AttachmentPanel(QtWidgets.QWidget):
             self.main.page_update()
             return
         if (
-            not Path(cover).exists()
-            or not Path(cover).is_file()
-            or not cover.lower().endswith((".jpg", ".png", ".jpeg"))
+                not Path(cover).exists()
+                or not Path(cover).is_file()
+                or not cover.lower().endswith((".jpg", ".png", ".jpeg"))
         ):
             return
         try:
@@ -156,11 +157,13 @@ class AttachmentPanel(QtWidgets.QWidget):
             cover_land_ext_type = "png"
 
         idx = 0
-        command = ""
+        commands = []
         if cover:
-            command += f' -attach "{cover}" -metadata:s:t:{idx} mimetype={cover_mime_type} -metadata:s:t:{idx} filename="cover.{cover_ext_type}" '
+            commands.append(f' -attach "{cover}" -metadata:s:t:{idx} mimetype={cover_mime_type} '
+                            f'-metadata:s:t:{idx} filename="cover.{cover_ext_type}" ')
             idx += 1
         if cover_land:
-            command += f' -attach "{cover_land}" -metadata:s:t:{idx} mimetype={cover_land_mime_type} -metadata:s:t:{idx} filename="cover_land.{cover_land_ext_type}" '
+            commands.append(f' -attach "{cover_land}" -metadata:s:t:{idx} mimetype={cover_land_mime_type} '
+                            f'-metadata:s:t:{idx} filename="cover_land.{cover_land_ext_type}" ')
 
-        return {"attachments": command}
+        return {"attachments": "".join(commands)}
